build.gradle.kts: improve log output for UTs